namespace Game.Data
{
	public static class AxisNames
	{
		public const string Submit = "Submit";
		public const string Cancel = "Cancel";
		public const string Horizontal = "Horizontal";
		public const string Vertical = "Vertical";
		public const string Fire1 = "Fire1";
		public const string Evade = "Evade";
		public const string AutoAim = "AutoAim";
		public const string NextWeapon = "NextWeapon";
	}
}
